--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
     <title>Heroic Features - Start Bootstrap Template</title>
 
-    <!-- Bootstrap Core CSS css/bootstrap.min.css-->
-    <link href="" rel="stylesheet">
+    <!-- Bootstrap Core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom CSS css/heroic-features.css-->
-    <link href="" rel="stylesheet">
+    <!-- Custom CSS -->
+    <link href=""css/gudangstyle.css rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -153,11 +153,11 @@
     </div>
     <!-- /.container -->
 
-    <!-- jQuery js/jquery.js-->
-    <script src=""></script>
+    <!-- jQuery -->
+    <script src="js/jquery.js"></script>
 
-    <!-- Bootstrap Core JavaScript js/bootstrap.min.js-->
-    <script src=""></script>
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
 
 </body>
 
