--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<a href="/templatesatu">Template Satu</a>
-<a href="/templatedua">Template Dua</a>
+<a href="/gudang/templatesatu">Template Satu</a>
+<a href="/gudang/templatedua">Template Dua</a>
 
