--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<a href="/gudang/templatesatu">Template Satu</a>
-<a href="/gudang/templatedua">Template Dua</a>
+<a href="/kategori/fashion-&-aksesoris">fashion & aksesoris</a>
+<a href="/kategori/ibu-dan-anak">ibu dan anak</a>
 
