--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
-
-kategori index html
+<script type="text/javascript">
+window.location.href='https://jualproduk.github.io/kategori/fashion-pria';
+</script>
