--- a/fashion-pria/index.html
+++ b/fashion-pria/index.html
@@ -4,7 +4,7 @@
     <meta content="text/html; charset=utf-8" http-equiv="content-type">
     <meta content="IE=9; IE=8; IE=7; IE=EDGE; chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, minimum-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="Jual Fashion Pria">
     <title>Jual Fashion Pria</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="/kategori/style/css/style.css" rel="stylesheet">
@@ -19,7 +19,7 @@
     <![endif]-->
   </head>
   <body>
-    Start
+    
     <script src="/kategori/style/js/jquery.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </body>
