--- a/fashion-pria/index.html
+++ b/fashion-pria/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta content="text/html; charset=utf-8" http-equiv="content-type">
-    <meta content="IE=9; IE=8; IE=7; IE=EDGE; chrome=1" http-equiv="X-UA-Compatible">
+    <meta content="text/html; charset=utf-8" https-equiv="content-type">
+    <meta content="IE=9; IE=8; IE=7; IE=EDGE; chrome=1" https-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, minimum-scale=1">
     <meta name="description" content="Jual Fashion Pria">
     <title>Jual Fashion Pria</title>
@@ -61,7 +61,7 @@
 
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card">
-                    <img class="card-img-top img-fluid" src="http://placehold.it/500x325" alt="">
+                    <img class="card-img-top img-fluid" src="https://placehold.it/500x325" alt="">
                     <div class="card-block">
                         <h4 class="card-title">Card title</h4>
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
@@ -74,7 +74,7 @@
 
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card">
-                    <img class="card-img-top img-fluid" src="http://placehold.it/500x325" alt="">
+                    <img class="card-img-top img-fluid" src="https://placehold.it/500x325" alt="">
                     <div class="card-block">
                         <h4 class="card-title">Card title</h4>
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo magni sapiente, tempore debitis beatae culpa natus architecto.</p>
@@ -87,7 +87,7 @@
 
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card">
-                    <img class="card-img-top img-fluid" src="http://placehold.it/500x325" alt="">
+                    <img class="card-img-top img-fluid" src="https://placehold.it/500x325" alt="">
                     <div class="card-block">
                         <h4 class="card-title">Card title</h4>
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
@@ -100,7 +100,7 @@
 
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card">
-                    <img class="card-img-top img-fluid" src="http://placehold.it/500x325" alt="">
+                    <img class="card-img-top img-fluid" src="https://placehold.it/500x325" alt="">
                     <div class="card-block">
                         <h4 class="card-title">Card title</h4>
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo magni sapiente, tempore debitis beatae culpa natus architecto.</p>
