--- a/fashion-pria/index.html
+++ b/fashion-pria/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta content="text/html; charset=utf-8" https-equiv="content-type">
-    <meta content="IE=9; IE=8; IE=7; IE=EDGE; chrome=1" https-equiv="X-UA-Compatible">
+    <meta content="text/html; charset=utf-8" http-equiv="content-type">
+    <meta content="IE=9; IE=8; IE=7; IE=EDGE; chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, minimum-scale=1">
     <meta name="description" content="Jual Fashion Pria">
     <title>Jual Fashion Pria</title>
