--- a/fashion-pria/index.html
+++ b/fashion-pria/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, minimum-scale=1">
     <meta name="description" content="Jual Fashion Pria">
     <title>Jual Fashion Pria</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href="/kategori/style/css/bootstrap.min.css" rel="stylesheet">
     <link href="/kategori/style/css/style.css" rel="stylesheet">
     <noscript id="deferred-styles">
       <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
