--- a/fashion-pria/index.html
+++ b/fashion-pria/index.html
@@ -8,9 +8,6 @@
     <title>Jual Fashion Pria</title>
     <link href="/kategori/style/css/bootstrap.min.css" rel="stylesheet">
     <link href="/kategori/style/css/style.css" rel="stylesheet">
-    <noscript id="deferred-styles">
-      <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
-    </noscript>
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn"t work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -126,6 +123,6 @@
     </footer>
 
     <script src="/kategori/style/js/jquery.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="/kategori/style/js/bootstrap.min.js"></script>
   </body>
 </html>
