--- a/fashion-pria/index.html
+++ b/fashion-pria/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, minimum-scale=1">
     <meta name="description" content="Jual Fashion Pria">
     <title>Jual Fashion Pria</title>
-    <link href="/kategori/style/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!-- <link href="/kategori/style/css/bootstrap.min.css" rel="stylesheet"> -->
     <link href="/kategori/style/css/style.css" rel="stylesheet">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn"t work if you view the page via file:// -->
@@ -143,6 +144,7 @@
     <!-- /.container -->
 
     <script src="/kategori/style/js/jquery.js"></script>
-    <script src="/kategori/style/js/bootstrap.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <!-- <script src="/kategori/style/js/bootstrap.min.js"></script> -->
   </body>
 </html>
