--- a/fashion-pria/index.html
+++ b/fashion-pria/index.html
@@ -5,7 +5,7 @@
     <meta content="IE=9; IE=8; IE=7; IE=EDGE; chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, minimum-scale=1">
     <meta name="description" content="Jual Fashion Pria">
-    <title>Jual Fashion Pria</title>
+    <title>Jual Produk: Fashion Pria</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="/kategori/style/css/style.css" rel="stylesheet">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -28,7 +28,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Start Bootstrap</a>
+                <a class="navbar-brand" href="https://jualproduk.github.io/kategori/fashion-pria/">Jual Produk</a>
             </div>
             <!-- /.navbar-collapse -->
         </div>
