--- a/fashion-pria/index.html
+++ b/fashion-pria/index.html
@@ -110,7 +110,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Jual Produk Fashion Pria 2017</p>
+                    <p>Copyright &copy; Jual Produk 2017</p>
                 </div>
             </div>
         </footer>
