--- a/fashion-pria/tas-pria.html
+++ b/fashion-pria/tas-pria.html
@@ -28,7 +28,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                Jual Produk <a class="navbar-brand" href="https://jualproduk.github.io/kategori/fashion-pria/" title="Tas Pria">Tas Pria</a>
+                Jual Produk <a class="navbar-brand" href="https://jualproduk.github.io/kategori/fashion-pria/tas-pria" title="Jual Produk Tas Pria">Tas Pria</a>
             </div>
             <!-- /.navbar-collapse -->
         </div>
