--- a/fashion-pria/tas-pria.html
+++ b/fashion-pria/tas-pria.html
@@ -28,7 +28,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                Jual Produk <a class="navbar-brand" href="https://jualproduk.github.io/kategori/fashion-pria/tas-pria" title="Jual Produk Tas Pria">Tas Pria</a>
+                Jual Produk 
             </div>
             <!-- /.navbar-collapse -->
         </div>
@@ -41,7 +41,7 @@
         <!-- Title -->
         <div class="row">
             <div class="col-lg-12">
-                <h3>Tas Pria</h3>
+              <h3><a class="navbar-brand" href="https://jualproduk.github.io/kategori/fashion-pria/tas-pria" title="Jual Produk Tas Pria">Tas Pria</a></h3>
             </div>
         </div>
         <!-- /.row -->
