--- a/fashion-pria/tas-pria.html
+++ b/fashion-pria/tas-pria.html
@@ -45,7 +45,7 @@
 
             <div class="col-md-3 col-sm-6 hero-feature">
                 <div class="thumbnail">
-                    <img src="https://placehold.it/800x500" alt="">
+                    <img src="https://lh3.googleusercontent.com/-pW1FD2CwhZ0/WQXa8dxU6QI/AAAAAAAACeI/rXQgOrt9ygI3vzmoT1ge9XJNj5QT-I7kQCLcB/s2048/kp0001-1.jpg" alt="">
                     <div class="caption">
                         <h3>Feature Label</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
