--- a/fashion-pria/tas-pria.html
+++ b/fashion-pria/tas-pria.html
@@ -49,7 +49,8 @@
                     <div class="caption">
                         <h3>Feature Label</h3>
                         <p>
-                            <a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">More Info</a>
+                            <a href="#" class="btn btn-default">Info lebih lanjut
+</a>
                         </p>
                     </div>
                 </div>
@@ -61,7 +62,8 @@
                     <div class="caption">
                         <h3>Feature Label</h3>
                         <p>
-                            <a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">More Info</a>
+                            <a href="#" class="btn btn-default">Info lebih lanjut
+</a>
                         </p>
                     </div>
                 </div>
@@ -73,7 +75,8 @@
                     <div class="caption">
                         <h3>Feature Label</h3>
                         <p>
-                            <a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">More Info</a>
+                            <a href="#" class="btn btn-default">Info lebih lanjut
+</a>
                         </p>
                     </div>
                 </div>
@@ -85,7 +88,8 @@
                     <div class="caption">
                         <h3>Feature Label</h3>
                         <p>
-                            <a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">More Info</a>
+                            <a href="#" class="btn btn-default">Info lebih lanjut
+</a>
                         </p>
                     </div>
                 </div>
